# http-call-envoy

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  envoy copy_all.yaml  envoy.yaml  envoy_copy.yaml
src/: lib.rs
