[package]
name = "http-call-envoy"
version = "0.0.1"
authors = ["Raj Ramalingam"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

# log
log = "0.4.22"

# proxy-wasm
proxy-wasm = "0.2.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
